# lknet

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  Client.h  Doxyfile  Jenkinsfile  Message.h  README.md  Server.cpp  Server.h  build.bat  build.sh  main.cpp
common/proto/: request.proto
docs/html/: _client_8cpp.html  _client_8h.html  _client_8h_source.html  _config_loader_8cpp.html  _config_loader_8h.html  _config_loader_8h_source.html  _i_o_base_8cpp.html  _i_o_base_8h.html  _i_o_base_8h_source.html  _message_8h.html  _message_8h_source.html  _server_8cpp.html  _server_8h.html  _server_8h_source.html  annotated.html  class_client-members.html  class_client.html  class_data_base_register-members.html  class_data_base_register.html  class_i_message-members.html  class_i_message.html  class_i_o_base-members.html  class_i_o_base.html  class_message-members.html  class_message.html  class_request-members.html  class_request.html  class_request_handler_router-members.html  class_request_handler_router.html  class_response-members.html  class_response.html  class_server-members.html  class_server.html  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  (+392 more)
docs/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_d.js  all_e.js  all_f.js  classes_10.js  classes_2.js  classes_3.js  classes_8.js  classes_b.js  classes_f.js  defines_0.js  enums_4.js  enumvalues_9.js  enumvalues_e.js  files_0.js  files_1.js  files_3.js  files_5.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_16.js  functions_2.js  (+26 more)
docs/latex/: _client_8cpp.tex  _client_8h.tex  _client_8h_source.tex  _config_loader_8cpp.tex  _config_loader_8h.tex  _config_loader_8h_source.tex  _i_o_base_8cpp.tex  _i_o_base_8h.tex  _i_o_base_8h_source.tex  _message_8h.tex  _message_8h_source.tex  _server_8cpp.tex  _server_8h.tex  _server_8h_source.tex  annotated.tex  class_client.tex  class_data_base_register.tex  class_i_message.eps  class_i_message.tex  class_i_o_base.eps  class_i_o_base.tex  class_message.eps  class_message.tex  class_request.tex  class_request_handler_router.tex  class_response.tex  class_server.tex  classbasic__json.tex  classbyte__container__with__subtype.tex  classdetail_1_1binary__reader.tex  classdetail_1_1binary__writer.tex  classdetail_1_1exception.tex  classdetail_1_1file__input__adapter.tex  classdetail_1_1input__stream__adapter.tex  classdetail_1_1invalid__iterator.tex  classdetail_1_1iter__impl.tex  classdetail_1_1iteration__proxy.tex  classdetail_1_1iteration__proxy__value.tex  classdetail_1_1iterator__input__adapter.tex  classdetail_1_1json__ref.tex  (+181 more)
example/: CMakeLists.txt
example/serialization_request/: CMakeLists.txt  main.cpp
example/serialization_response/: main.cpp
example/simple_client/: CMakeLists.txt  main.cpp
example/simple_server/: CMakeLists.txt  main.cpp
example/simple_server_with_callback/: CMakeLists.txt  main.cpp
example/test/: CMakeLists.txt  main.cpp
lknet/include/: client.h  lkclient.h  lkserevr.h  message.h  server.h  session.h
lknet/source/: client.cpp  message.cpp  server.cpp  session.cpp
src/include/: Client.h  ClientBuilder.h  ConfigLoader.h  IOBase.h  Message.h  Request.h  Server.h  ServerBuilder.h  common.h  tools.h
src/source/: Client.cpp  ClientBuilder.cpp  ConfigLoader.cpp  IOBase.cpp  Request.cpp  Server.cpp  ServerBuilder.cpp  common.cpp  tools.cpp
src/source/logger/: packer.cpp
test/: CMakeLists.txt  main.cpp  test.cpp  test.h  test_server_handler_set_func.cmake
test/ConfigLoaderTest/: CMakeLists.txt  main.cpp
tools/: Jenkinsfile  crumb.py
